--- a/app/src/main/res/layout/activity_video_activity.xml
+++ b/app/src/main/res/layout/activity_video_activity.xml
@@ -5,16 +5,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".view.VideoActivity">
 
-    <VideoView
-        android:id="@+id/video"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:saveEnabled="true"
+            android:layout_height="wrap_content"
+            />
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/text_title"
@@ -25,7 +34,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/video" />
+        app:layout_constraintTop_toBottomOf="@id/frameLayout" />
 
     <TextView
         android:id="@+id/text_subtitle"
